- Fix extension for StackOverflow website update & - Answers Sidebar : add the ability to hover the number of answers cell to get additional information about the current page & - Small bug fixes in Answer Sidebar (coloring sidebar after upvoting, working 100% now)

--- a/css/contentStyle.css
+++ b/css/contentStyle.css
@@ -1,4 +1,5 @@
 .circlePercent {
+    color: black;
     width: 50px;
     height: 50px;
     line-height:50px; /*pour centrer le texte verticalement (même taille que height)*/
