--- a/css/floatingSidebar.css
+++ b/css/floatingSidebar.css
@@ -16,7 +16,7 @@
 }
 
 .social li a {
-    display: block;
+    display: inline-block;
     height: 20px;
     width: 40px;
     background: rgb(100,100,100);
@@ -45,19 +45,21 @@
 .social li:last-child a { border-radius: 0 0 5px 0 }
 
 .social li a span {
-    width: 100px;
+    font-weight: normal;
+    font-size: 13px;
+    width: 200px;
     float: left;
-    text-align: center;
-    background: #222;
+    text-align: left;
+    background: rgb(50,50,50);
     color: #fff;
-    margin: -25px 74px;
+    margin: -50px 74px;
     padding: 8px;
     transform-origin: 0;
     visibility: hidden;
     opacity: 0;
     transform: rotateY(45deg);
     border-radius: 5px;
-    transition: all .5s ease .300ms
+    transition: all .5s ease .1s
 }
 
 .social li span:after {
@@ -67,9 +69,9 @@
     height: 0;
     position: absolute;
     left: -20px;
-    top: 7px;
+    top: 23px;
     border-left: 10px solid transparent;
-    border-right: 10px solid #222;
+    border-right: 10px solid rgb(50,50,50);
     border-bottom: 10px solid transparent;
     border-top: 10px solid transparent;
 }
